5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1637_2703.log
== TEST (2019-04-11 10:20:04) 
-- CODE:
idade = int(input("digite a idade: "))
if(idade=>18):
	titulo = eleitor
else:
	titulo = nao_eleitor
print(titulo)
-- ERROR:
File "XXXX", line 2
    if(idade=>18):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:20:18) 
-- CODE:
idade = int(input("digite a idade: "))
if(idade>=18):
	titulo = eleitor
else:
	titulo = nao_eleitor
print(titulo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    titulo = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:21:01) 
-- CODE:
idade = int(input("digite a idade: "))
if(idade>=18):
	titulo = "eleitor"
else:
	titulo = "nao_eleitor"
print(titulo)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:21:09) 
-- CODE:
idade = int(input("digite a idade: "))
if(idade>=18):
	titulo = "eleitor"
else:
	titulo = "nao_eleitor"
print(titulo)
-- EXECUTION TIME:
0.145285
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
